Projet GL/test/src/test/deca/context/invalid/increment2/float-comp-bool.deca
// Test float == bool

// Historique : cree le 11/01/2023

{
    float a = 3;

    boolean b = true;

    b = a == b;
}